--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -61,13 +61,14 @@ jobs:
     steps:
     - name: Execute deployment script
       uses: appleboy/ssh-action@v1.2.0
+      env:
+        COMPOSE_FILE: "/home/ubuntu/docker-compose.yml"
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-            cd
-            sudo docker-compose down
+            sudo docker-compose -f $COMPOSE_FILE down
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions
-            sudo docker-compose up -d
+            sudo docker-compose -f $COMPOSE_FILE up -d
             sudo docker image prune -a -f
