--- a/.github/workflows/app-with-ecr-actions-02.yml
+++ b/.github/workflows/app-with-ecr-actions-02.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_PRIVATE_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
       - name: Create Short SHA
-        run : echo "Short_SHA=${GITHUB_SHA::} >> $GITHUB_ENV"
+        run : echo "Short_SHA=${GITHUB_SHA::7} >> $GITHUB_ENV"
 
       - name: Build Docker image
         run: |
