--- a/.github/workflows/app-with-ecr-actions-02.yml
+++ b/.github/workflows/app-with-ecr-actions-02.yml
@@ -63,3 +63,32 @@ jobs:
       - name: Push Docker image to Amazon ECR
         run: |
           docker push ${{ secrets.AWS_ECR_PRIVATE_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_PRIVATE_REPOSITORY }}:${{ env.SHORT_SHA }}
+
+      - name: ECR test
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          script: |
+            # aws cli 설치
+            sudo apt-get update && sudo apt-get install -y awscli
+
+            # 2. AWS Credentials 설정
+            mkdir -p ~/.aws
+            echo "[default]" > ~/.aws/credentials
+            echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+            echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+  
+            echo "[default]" > ~/.aws/config
+            echo "region = ap-northeast-2" >> ~/.aws/config
+            echo "output = json" >> ~/.aws/config
+  
+            # 3. Docker Login (ECR)
+            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com
+  
+            # 4. Docker Pull
+            docker pull 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com/first-private-ecr:b8dc3f2
+      
+          
+      
