--- a/.github/workflows/app-with-ecr-actions-02.yml
+++ b/.github/workflows/app-with-ecr-actions-02.yml
@@ -71,23 +71,23 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            # aws cli 설치
+            # 14-1. AWS CLI 설치 (EC2 내부에서)
             sudo apt-get update && sudo apt-get install -y awscli
 
-            # 2. AWS Credentials 설정
+            # 14-2. AWS Credentials 파일 생성 (Secrets 값 넣기)
             mkdir -p ~/.aws
             echo "[default]" > ~/.aws/credentials
             echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
             echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+            echo "region=ap-northeast-2" >> ~/.aws/credentials
+            echo "output=json" >> ~/.aws/credentials
+            chmod 755 ~/.aws/credentials
+
   
-            echo "[default]" > ~/.aws/config
-            echo "region = ap-northeast-2" >> ~/.aws/config
-            echo "output = json" >> ~/.aws/config
-  
-            # 3. Docker Login (ECR)
+            # 14-3. ECR Login (EC2 내부에서)
             aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com
   
-            # 4. Docker Pull
+            # 14-4. ECR Docker 이미지 Pull (EC2 내부에서)
             docker pull 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com/first-private-ecr:b8dc3f2
       
           
