--- a/.github/workflows/app-with-ecr-actions-02.yml
+++ b/.github/workflows/app-with-ecr-actions-02.yml
@@ -92,7 +92,7 @@ jobs:
 
   
             # 14-3. ECR Login (EC2 내부에서)
-            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com/my-repo
+            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com/ecr-cicd
   
             # 14-4. ECR Docker 이미지 Pull (EC2 내부에서)
             docker pull 904570587382.dkr.ecr.ap-northeast-2.amazonaws.com/ecr-private:${{ env.SHORT_SHA }}
